package com.flotasytransportes.dominio.modelo;

public enum EstadoVehiculo {
    DISPONIBLE,
    EN_RUTA,
    MANTENIMIENTO
}
