package com.flotasytransportes.dominio.modelo;

public enum TipoEnergia {
	ELECTRICO, GASOLINA
}
